lambda/tests/ui/parse.stderr
error: fn main can only take 1 argument
 --> $DIR/parse.rs:3:1
  |
3 | #[lambda_attributes::lambda]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  |
  = note: consider adding a `main` function to `$DIR/tests/ui/parse.rs`

For more information about this error, try `rustc --explain E0601`.
